--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Fullstack Experiments</h1>
+    <h1>Fullstack Experiment - 3</h1>
     <div class="links">
-      <a href="3.1/product-card.html">Exp 3.1 - Student Registration</a>
-      <a href="3.2/index.html">Exp 3.2 - Banking Interface</a>
-      <a href="3.3/person-hierarchy.html">Exp 3.3 - Admin Dashboard</a>
+      <a href="3.1/product-card.html">Exp 3.1 - ProductCard Component</a>
+      <a href="3.2/index.html">Exp 3.2 - Library Management UI</a>
+      <a href="3.3/person-hierarchy.html">Exp 3.3 - Personal Class Hierarchy</a>
 
     </div>
   </div>
